--- a/app/src/main/res/drawable/date.xml
+++ b/app/src/main/res/drawable/date.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0E0E0" />
+    <solid android:color="#616161" />
     <stroke
         android:width="0dip"
-        android:color="#E0E0E0" />
-    <corners android:radius="10dip" />
+        android:color="#616161" />
+    <corners android:radius="16dip" />
     <padding
         android:bottom="0dip"
         android:left="0dip"
