--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -3,36 +3,58 @@
     android:id="@+id/message_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#EEEEEE"
     android:orientation="vertical"
-    android:paddingBottom="8dp"
-    android:paddingEnd="8dp"
-    android:paddingStart="8dp"
-    android:paddingTop="8dp">
+    android:padding="6dp">
     
-    <TextView
-        android:id="@+id/message_body_text_view"
+    <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/even"
-        android:maxWidth="250dp"
-        android:textAppearance="?android:textAppearanceMedium" />
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/message_body_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="200dp"
+            android:textSize="16sp"
+            android:textColor="#000"/>
+        
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="bottom">
 
-    <TextView
-        android:id="@+id/message_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp" />
+            <TextView
+                android:id="@+id/message_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp" />
 
+            <ImageView
+                android:id="@+id/delivery_image_view"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="bottom|end"
+                android:visibility="gone"
+                android:src="@drawable/unsent"/>
+            
+        </LinearLayout>
+
+    </LinearLayout>
+    
     <TextView
         android:id="@+id/message_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:padding="4dp"
-        android:layout_margin="8dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/date"
+        android:padding="4dp"
+        android:textColor="#fff"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:visibility="gone"/>
+        android:visibility="gone" />
     
 </LinearLayout>
