--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="negative_color">#E53935</color>
-    <color name="send_messages">#DCEDC8</color>
+    <color name="send_messages">#A5D6A7</color>
     <color name="get_messages">#FFFFFF</color>
+    <color name="text_color_get">#616161</color>
+    <color name="text_color_send">#1B5E20</color>
 </resources>
