--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,23 +8,33 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/chat_background">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/chat_messages_recycler_view"
             android:layout_width="match_parent"
-            android:background="@drawable/chat_background"
             android:layout_height="0dp"
-            android:layout_weight="9">
+            android:layout_weight="9"
+            android:isScrollContainer="true">
 
         </android.support.v7.widget.RecyclerView>
 
+        <TextView
+            android:id="@+id/user_types_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textSize="16sp"
+            android:visibility="gone"/>
+        
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:padding="8dp"
+            android:background="#fff"
             android:orientation="horizontal">
 
             <ImageButton
