--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -12,13 +12,27 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         
-        <TextView
-            android:id="@+id/message_body_text_view"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxWidth="200dp"
-            android:textSize="16sp"
-            android:textColor="#000"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/message_body_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="250dp"
+                android:textSize="16sp"
+                android:textColor="#000"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_photo"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end"
+                android:visibility="gone"/>
+            
+        </LinearLayout>
         
         <LinearLayout
             android:layout_width="wrap_content"
@@ -34,8 +48,8 @@
 
             <ImageView
                 android:id="@+id/delivery_image_view"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_gravity="bottom|end"
                 android:visibility="gone"
                 android:src="@drawable/unsent"/>
