--- a/app/src/main/res/drawable/new_message_even.xml
+++ b/app/src/main/res/drawable/new_message_even.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#90A4AE" />
+    <solid android:color="@color/new_message" />
     <stroke
         android:width="0dip"
-        android:color="#90A4AE" />
-    <corners android:radius="18dip" />
+        android:color="@color/new_message" />
+    <corners android:radius="6dip" />
     <padding
         android:bottom="0dip"
         android:left="0dip"
