--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -5,6 +5,19 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="6dp">
+
+    <TextView
+        android:id="@+id/message_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/date"
+        android:padding="4dp"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone" />
     
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -57,18 +70,5 @@
         </LinearLayout>
 
     </LinearLayout>
-    
-    <TextView
-        android:id="@+id/message_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/date"
-        android:padding="4dp"
-        android:textColor="#fff"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:visibility="gone" />
     
 </LinearLayout>
