--- a/app/src/main/res/layout/content_initial.xml
+++ b/app/src/main/res/layout/content_initial.xml
@@ -6,15 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ua.nure.dzhafarov.vkontakte.activities.ActivityListFriends"
+    tools:context="ua.nure.dzhafarov.vkontakte.activities.MainActivity"
     tools:showIn="@layout/app_bar_initial">
-
-    <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_host"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
+    
+    <include layout="@layout/fragment_host"/>
     
 </android.support.constraint.ConstraintLayout>
