--- a/app/src/main/res/layout/fragment_list_photos_layout.xml
+++ b/app/src/main/res/layout/fragment_list_photos_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout 
-    android:id="@+id/refresh_layout"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,4 +10,20 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
     
-</android.support.v4.widget.SwipeRefreshLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="10dp" />
+    
+    <TextView
+        android:id="@+id/title_if_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="There are no available photo albums"
+        android:visibility="gone"/>
+    
+</RelativeLayout>
