--- a/app/src/main/res/layout/fragment_list_friends_layout.xml
+++ b/app/src/main/res/layout/fragment_list_friends_layout.xml
@@ -5,10 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_friends"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_friends"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+        
+        <Button
+            android:id="@+id/try_again_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Try again"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+        
+    </RelativeLayout>
     
 </android.support.v4.widget.SwipeRefreshLayout>
